# llama-ai-test

./: .gitignore  README.md  pyproject.toml
app/: __main__.py
app/api/: endpoints.py
app/models/: request_models.py  settings.py
app/services/: rag_service.py
app/utils/: hash_util.py  llama_index_helper.py
data/: Four Elements to Rule Them All_ Abundances are Rigidly Coupled in the Milky Way Disk.html
data/Four Elements to Rule Them All_ Abundances are Rigidly Coupled in the Milky Way Disk_files/: utz6mli.css
data/arXiv-2504.18518v1/: aa53559-24.bbl  aa53559-24.tex  horton.bib
storage/: hash.txt  index_store.json
